# walrus

./: .gitignore  .travis.yml  COPYRIGHT.md  Dockerfile  LICENSE  Makefile.am  PackageInfo.g  Polynomial-time proofs that groups are hyperbolic.ipynb  README.md  TODO.org  autogen.sh  bench.org  configure.ac  init.g  makedoc.g  read.g
.github/workflows/: CI.yml
_data/: package.yml
doc/: Intros.autodoc  chap0.html  chap0.txt  chap0_mj.html  chap1.html  chap1.txt  chap1_mj.html  chap2.html  chap2.txt  chap2_mj.html  chap3.html  chap3.txt  chap3_mj.html  chap4.html  chap4.txt  chap4_mj.html  chapInd.html  chapInd.txt  chapInd_mj.html  magmainterface.xml  overview.xml  pregroups.xml
gap/: anadata.gd  anadata.gi  anatph.gd  anatph.gi  bench.org  examples.gd  examples.gi  location.gd  location.gi  place.gd  place.gi  pregroup.gd  pregroup.gi  pregroupconstr.gi  pregroupoffreegroup.gi  presentation.gd  presentation.gi  relator.gd  relator.gi  small_pregroups.g  small_pregroups.gd  small_pregroups.gi  type-helpers.gd  util.gd  util.gi  walrus.gd  walrus.gi
scripts/: build_gap.sh
src/: anatph.c  walrus.c
tst/: F2.out  F20.out  basic.tst  components.tst  derek.tst  dijkstra.tst  examples.tst  jackbutton.tst  presentations.tst  psl.out  s3s3.out  small.tst  testall.g  testbench.tst  testexamples.g  testexamples.tst  triangle.tst  ui.tst
tst/standard/: pregroup.tst  presentation.tst
